added a moveHero method as well as some small changes in other files